added a vertical line in css to more closely match the mock up. also added css styling to html elements.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>My First Blog</title>
     </head>
     <body>
+        <figure class="hero"></figure>
         <header>
+            <div class="vl"></div>
             <h1>What's on your mind?</h1>
         </header>
-        <figure class="hero"></figure>
         <main>
             <form>
                 <label for="username">Usernname:</label><br>
