--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label for="content">Content:</label><br>
                 <textarea id="content" name="content"  cols="20">
                 </textarea><br>
-                <input type="submit" value="submit">
+                <button type="submit" value="submit">Submit</button>
               </form>
         </main>
     </body>
