added dark and light button to blog.html and styled in blog.css. also linked to blog.html and blog.js

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
  </head>
  <body>
   <header>
+    <button>Light</button>
     <h1>My First Blog</h1>
   </header>
   <figure class="hero"></figure>
@@ -42,5 +43,6 @@
         <li>Blog: Full Stack Blog</li>
         <li>Email: scheckjah@yahoo.com</li>
     </ul>
+    <script src="./Assets/js/blog.js"></script>
  </body>
 </html>
