--- a/blog.html
+++ b/blog.html
@@ -5,19 +5,21 @@
     <title>My Blog</title>
  </head>
  <body>
-  <header>
-    <button>Light</button>
-    <h1>My First Blog</h1>
+ <div class="container light">
+     <header>
+         <button id="theme">Light</button>
+         <button id="previous">Back</button>
+         <h1>My First Blog</h1>
   </header>
   <figure class="hero"></figure>
   <main>
     <section> 
-          <h2>Blog Title</h2>
-          <div>
-              <p>
-                  Here is the content
-                </p>
-            </div>
+        <h2>Blog Title</h2>
+        <div>
+            <p>
+                Here is the content
+            </p>
+        </div>
     </section>
     <section>
         <h2>Title 2</h2>
@@ -28,21 +30,22 @@
         </div>
     </section>
     <section>
-     <h2>Title 3</h2>
-     <div>
-         <p>
-             Here is the content
+        <h2>Title 3</h2>
+        <div>
+            <p>
+                Here is the content
             </p>
         </div> 
     </section>
-  </main>
-  <figure class="hero"></figure>
-  <footer> Made By Scheck Jah</footer>
-    <ul>
-        <li>Portfolio: Scheck Jah</li>
-        <li>Blog: Full Stack Blog</li>
-        <li>Email: scheckjah@yahoo.com</li>
-    </ul>
-    <script src="./Assets/js/blog.js"></script>
+</main>
+<figure class="hero"></figure>
+<footer> Made By Scheck Jah</footer>
+<ul>
+    <li>Portfolio: Scheck Jah</li>
+    <li>Blog: Full Stack Blog</li>
+    <li>Email: scheckjah@yahoo.com</li>
+</ul>
+</div>
+<script src="./Assets/js/blog.js"></script>
  </body>
 </html>
