linked blog.html and form.js files to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./Assets/css/style.css">
@@ -11,7 +11,7 @@
             <h1>What's on your mind?</h1>
         </header>
         <main>
-            <form>
+            <form action="./blog.html">
                 <label for="username">Usernname:</label><br>
                 <input type="text" id="uname" name="usernname"><br>
                 <label for="title">Title:</label><br>
@@ -22,5 +22,6 @@
                 <button type="submit" value="submit">Submit</button>
               </form>
         </main>
+        <script src="Assets/js/form.js"></script>
     </body>
 </html>
