updated blog and form  javascript so that data from the form will be submitted to the local storage and pulled from the next html page

--- a/blog.html
+++ b/blog.html
@@ -8,12 +8,12 @@
  <div class="container light">
      <header>
          <button id="theme">Light</button>
-         <button id="previous">Back</button>
+         <a href="./index.html"><button >Back</button></a>
          <h1>My First Blog</h1>
   </header>
   <figure class="hero"></figure>
-  <main>
-    <section> 
+  <main id="blogsContainer">
+    <!-- <section> 
         <h2>Blog Title</h2>
         <div>
             <p>
@@ -36,7 +36,7 @@
                 Here is the content
             </p>
         </div> 
-    </section>
+    </section> -->
 </main>
 <figure class="hero"></figure>
 <footer> Made By Scheck Jah</footer>
