--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="./Assets/css/style.css">
-        <title>My First Blog</title>
-    </head>
-    <body>
-        <figure class="hero"></figure>
-        <header>
-            <div class="vl"></div>
-            <h1>What's on your mind?</h1>
-        </header>
-        <main>
-            <form action="./blog.html">
-                <label for="username">Usernname:</label><br>
-                <input type="text" id="uname" name="usernname"><br>
-                <label for="title">Title:</label><br>
-                <input type="text" id="title" name="title"><br>
-                <label for="content">Content:</label><br>
-                <textarea id="content" name="content"  cols="20">
-                </textarea><br>
-                <button type="submit" value="submit">Submit</button>
-              </form>
-        </main>
-        <script src="Assets/js/form.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./Assets/css/style.css">
+    <title>My First Blog</title>
+</head>
+
+<body>
+    <figure class="hero"></figure>
+    <header>
+        <div class="vl"></div>
+        <h1>What's on your mind?</h1>
+    </header>
+    <main>
+        <form id="form">
+            <div>
+                <label for="username">Usernname:</label>
+                <input type="text" id="uname" name="username" required>
+            </div>
+            <div>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required>
+            </div>
+            <div>
+                <label for="content">Content:</label>
+                <textarea id="content" name="content" cols="20"  required >
+                </textarea>              
+            </div>
+
+            <button type="submit" value="submit">Submit</button>
+        </form>
+    </main>
+    <script src="Assets/js/form.js"></script>
+</body>
+
 </html>
