moved js local storage function to logic.js. added styling to front page including form position and a shape with text to more accurately mirror the mock up

--- a/blog.html
+++ b/blog.html
@@ -19,24 +19,9 @@
             <p>
                 Here is the content
             </p>
-        </div>
-    </section>
-    <section>
-        <h2>Title 2</h2>
-        <div>
             <p>
-                Here is the content
-            </p>
-        </div>
-    </section>
-    <section>
-        <h2>Title 3</h2>
-        <div>
-            <p>
-                Here is the content
-            </p>
-        </div> 
-    </section> -->
+                Posted by: username
+        </div> -->
 </main>
 <figure class="hero"></figure>
 <footer> Made By Scheck Jah</footer>
@@ -47,5 +32,6 @@
 </ul>
 </div>
 <script src="./Assets/js/blog.js"></script>
+<script src="./Assets/js/logic.js"></script>
  </body>
 </html>
