added media queries to style.css and blog.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My First Blog</title>
 </head>
 
@@ -21,7 +22,7 @@
         <form class="side" id="form">
             <h1>Whats on your mind</h1>
             <div>
-                <label for="username">Usernname:</label>
+                <label for="uname">Usernname:</label>
                 <input type="text" id="uname" name="username" required>
             </div>
             <div>
@@ -37,6 +38,7 @@
             <button type="submit" value="submit">Submit</button>
         </form>
     </main>
+    <footer></footer>
 </div>
     <script src="Assets/js/form.js"></script>
     <script src="./Assets/js/blog.js"></script>
