--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
  <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./Assets/css/blog.css">
     <title>My Blog</title>
  </head>
