--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,8 @@
   </header>
   <figure class="hero"></figure>
   <main id="blogsContainer">
-    <!-- <section> 
+    <!-- Model Post
+        <section> 
         <h2>Blog Title</h2>
         <div>
             <p>
