styled submit button and added url to README.md

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </textarea>              
             </div>
 
-            <button type="submit" value="submit">Submit</button>
+            <button  type="submit" value="submit" id="submit">Submit</button>
         </form>
     </main>
     <footer></footer>
